# LIO-Lite

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
config/: params_lidar.yaml
launch/: run.launch  run_relocalize.launch
launch/include/: module_relocalize.launch  module_robot_state_publisher.launch  module_rviz.launch  module_rviz_relocalize.launch  module_sam.launch
launch/include/config/: relocalize.rviz  rviz.rviz
src/: featureExtraction.cpp  globalLocalize.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  utility.h
src/LIO-Lite/: CMakeLists.txt
src/LIO-Lite/config/: mid360.yaml  mid360_location.yaml
src/LIO-Lite/include/: custom_logs.hpp  imu_processing.hpp  laser_mapping.h  pointcloud_preprocess.h  so3_math.h
src/LIO-Lite/include/ivox3d/: eigen_types.h  ivox3d.h
src/LIO-Lite/include/register/: ndt.hpp
src/LIO-Lite/launch/: location_360.launch  mapping_avia.launch
src/LIO-Lite/launch/include/: rviz.rviz
src/LIO-Lite/src/: laser_mapping.cc  options.cc  pointcloud_preprocess.cc  run_location_online.cc  run_mapping_online.cc
